force-app/main/default/objects/Employee_Classification__c/Employee_Classification__c.object-meta.xml
<CustomObject>
    <description>Part of the BOFE inspection functionality that allows a deputy to define classifications, hours, and wages during an inspection</description>
    <label>Employee Classification</label>
    <nameField>
        <label>Employee Classification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Classifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>