force-app/main/default/objects/Employee_Classification__c/fields/Hours_Days_Worked__c.field-meta.xml
<CustomField>
    <fullName>Hours_Days_Worked__c</fullName>
    <description>Allows the deputy to enter the hours and days worked by the classified workers</description>
    <inlineHelpText>Enter the Hours and Days worked. For example 8:00am - 5:00pm Monday-Friday</inlineHelpText>
    <label>Hours &amp; Days Worked</label>
    <length>255</length>
    <type>Text</type>
</CustomField>