force-app/main/default/objects/Employee_Classification__c/fields/Inspection__c.field-meta.xml
<CustomField>
    <fullName>Inspection__c</fullName>
    <description>Parent Inspection</description>
    <inlineHelpText>The inspection this classification belongs to</inlineHelpText>
    <label>Inspection</label>
    <referenceTo>DIR_Inspection__c</referenceTo>
    <relationshipLabel>Employee Classifications</relationshipLabel>
    <relationshipName>Employee_Classifications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>