force-app/main/default/objects/Employee_Classification__c/fields/Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Employees__c</fullName>
    <description>Defines the number of employees for the classification</description>
    <inlineHelpText>Enter the number of employees for this classification</inlineHelpText>
    <label>Number of Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>