force-app/main/default/objects/Employee_Classification__c/fields/Wage_Type__c.field-meta.xml
<CustomField>
    <fullName>Wage_Type__c</fullName>
    <inlineHelpText>Select the type of wage paid to employees</inlineHelpText>
    <label>Wage Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Salary - Daily</fullName>
            </value>
            <value>
                <fullName>Salary - Weekly</fullName>
            </value>
            <value>
                <fullName>Salary - Monthly</fullName>
            </value>
            <value>
                <fullName>Piece Rate</fullName>
            </value>
            <value>
                <fullName>Commission</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>