force-app/main/default/objects/Employee_Classification__c/validationRules/Require_wage_type_for_wages.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_wage_type_for_wages</fullName>
    <active>true</active>
    <description>Requires the user to select a wage type when entering a wage</description>
    <errorConditionFormula>NOT( ISBLANK ( Wages__c ) )
&amp;&amp; ISPICKVAL (  Wage_Type__c , &#39;&#39; )</errorConditionFormula>
    <errorMessage>Please select a wage type when entering a wage.</errorMessage>
</ValidationRule>